--- a/ecs/index.html
+++ b/ecs/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Harper's ECS Portfolio</h1>
+  	<h1>Harper ECS Portfolio</h1>
   </div>
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | 2 | 3</h3>
