--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,9 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | 2 | 3</h3>
   </div>
   <div class="content">
-  
+  Skills
+	 I am pretty good at volleyball 
+	  I aslo ike to draw
   </div>
   <div class="footer">
     <h4>    <h4> <a href="../aboutme.html">About Me</a> | Contact | Copyright 2021
