--- a/aboutme.html
+++ b/aboutme.html
@@ -15,9 +15,12 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | 2 | 3</h3>
   </div>
   <div class="content">
-  Skills
-	 I am pretty good at volleyball 
-	  I aslo ike to draw
+  	<h2>Skills</h2>
+		<p>With a friend discuss the following questions:</p>
+		<ul>
+			<li>What text is appearing in both the code and the web page?</li>
+			<li>How is this language communicating extra information about the way to represent text?</li>
+		</ul>
   </div>
   <div class="footer">
     <h4>    <h4> <a href="../aboutme.html">About Me</a> | Contact | Copyright 2021
