--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | 2 | 3</h3>
   </div>
   <div class="content">
-	  <img src="images/home.jpg" alt="Welcome" width="960" height="500">
+	  <h1Typing Agent</h1>
+	   <img src="../images/typing.png" alt="Typing Test" width="960" height="500">
+	  <h1>ECS Portfolio</h1>
+	  <h1>ECS Portfolio</h1>
+	  <h1>ECS Portfolio</h1>
 	  </div>
   <div class="footer">
     <h4>    <h4> <a href="aboutme.html">About Me</a> | Contact | Copyright 2021
