--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,7 +14,14 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | 2 | 3</h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+	  <h1Typing Agent</h1>
+	   <img src="../images/typing.png" alt="Typing Test" width="960" height="500">
+	  <h1>ECS Portfolio</h1>
+	  <h1>ECS Portfolio</h1>
+	  <h1>ECS Portfolio</h1>
+	  </div>
+	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
