--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | 2 | 3</h3>
   </div>
   <div class="content">
-	
+	<img src="images/typing.png" alt="Typing Test" width="960" height="500">
+	   </div>
   <div class="footer">
     <h4>    <h4> <a href="aboutme.html">About Me</a> | Contact | Copyright 2021
   </div>
